--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="row">
     <div class="col-12">
     <div class="panel panel-default">
-      <div class="panel-heading">
+      <div class="panel-heading" id="schTab">
       <h3 class="panel-title">Current Train Schedule</h3>
     </div>
       <div class="panel-body">
@@ -51,7 +51,7 @@
   <div class="row">
     <div class="col-12">
     <div class="panel panel-default">
-      <div class="panel-heading">
+      <div class="panel-heading" id="schTab">
         <h3 class="panel-title">Add Train</h3>
       </div>
       <div class="panel-body">
