--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
         <form>
           <div class="form-group">
             <label for="exampleNAmeInput">Train Name</label>
-            <input type="text" class="form-control" id="TrainNameInput" aria-describedby="Train Name" placeholder="Name">
+            <input type="text" class="form-control" id="trainNameInput" aria-describedby="Train Name" placeholder="Name">
           </div>
           <div class="form-group">
             <label for="exampleLineInput">Line</label>
-            <input type="text" class="form-control" id="lineInput" aria-describedby="Train Line" placeholder="Name">
+            <input type="text" class="form-control" id="lineInput" aria-describedby="Train Line" placeholder="Line">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Destination</label>
@@ -70,13 +70,13 @@
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">First Train Time (HH:mm - military time)</label>
-            <input type="text" class="form-control" id="trainTimeInput" placeholder="Start Date">
+            <input type="text" class="form-control" id="trainTimeInput" placeholder="Time">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Frequency (min)</label>
-            <input type="number" class="form-control" id="frequencyInput" placeholder="">
+            <input type="number" class="form-control" id="frequencyInput" placeholder="(min)">
           </div>
-          <button type="submit" class="btn btn-primary" id="addTrainButton">Submit</button>
+          <button class="btn btn-primary" id="addTrainButton">Submit</button>
         </form>
 
       </div>
